# wow-server-sim

./: .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile.recording  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CAPTURE_GUIDE.md  CHANGELOG.md  DECISIONS.md  PRD.md
docs/diagrams/: python-tools.md  session-state-machine.md  system-overview.md  thread-model.md  tick-pipeline.md
scripts/: build.sh  demo.sh  record-demo-full.sh  record-fault-cascade.sh  record-gifs.sh  run_all_tests.sh  setup_venv.sh
src/control/: control_channel.cpp  control_channel.h
src/server/: connection.cpp  connection.h  event_parser.cpp  event_parser.h  game_loop.cpp  game_loop.h  game_server.cpp  game_server.h  main.cpp  session.cpp  session.h  session_event_queue.cpp  session_event_queue.h
src/server/events/: combat.cpp  combat.h  event.cpp  event.h  event_queue.cpp  event_queue.h  movement.cpp  movement.h  spellcast.cpp  spellcast.h
src/server/fault/: injector.cpp  injector.h  scenarios.cpp  scenarios.h
src/server/telemetry/: logger.cpp  logger.h
src/server/world/: entity.cpp  entity.h  zone.cpp  zone.h  zone_manager.cpp  zone_manager.h
tests/cpp/: CMakeLists.txt
tests/cpp/unit/: test_combat.cpp  test_control_channel.cpp  test_event_parser.cpp  test_fault_injection.cpp  test_game_loop.cpp  test_game_server.cpp  test_logger.cpp  test_movement.cpp  test_session.cpp  test_session_event_queue.cpp  test_spellcast.cpp  test_zone.cpp
tests/python/: conftest.py  test_benchmark.py  test_dashboard.py  test_demo_runner.py  test_fault_trigger.py  test_game_metrics.py  test_health_check.py  test_log_parser.py  test_mock_client.py  test_pipeline.py
tests/python/integration/: conftest.py  test_connection_lifecycle.py  test_end_to_end.py  test_fault_and_recovery.py  test_game_mechanic_degradation.py
tools/: pyproject.toml
tools/wowsim/: __init__.py  benchmark.py  cli.py  dashboard.py  dashboard.tcss  demo_runner.py  fault_trigger.py  game_metrics.py  health_check.py  log_parser.py  mock_client.py  models.py  pipeline.py
